--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -81,9 +81,9 @@
             <script>
               document.write(new Date().getFullYear());
             </script>
-            All rights reserved | This template is made with
+            All rights reserved | 
             <i class="icon-heart" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            <a href="https://www.tops-int.com/it-training-varachha-surat" target="_blank">Tops Technology Pvt. Ltd.</a>
           </p>
 
           <ul>
