--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -1,4 +1,4 @@
-{% extends 'blogs/base.html' %} {% load static %} {% block title %} {% endblock %} {% block style %} {% endblock %} {% block content %}
+{% extends 'blogs/base.html' %} {% load static %} {% block title %} Home {% endblock %} {% block style %} {% endblock %} {% block content %}
 <div id="colorlib-main">
   <div
     class="hero-wrap js-fullheight"
