--- a/blogs/templates/blogs/blogs.html
+++ b/blogs/templates/blogs/blogs.html
@@ -1,3 +1,3 @@
-{% extends 'blogs/base.html' %} {% load static %} {% block title %} 
+{% extends 'blogs/base.html' %} {% load static %} {% block title %} Blogs
 {% endblock %} {% block style %} {% endblock %} {% block content %}
 {% endblock %}
