--- a/blogs/templates/blogs/contact.html
+++ b/blogs/templates/blogs/contact.html
@@ -1,4 +1,4 @@
-{% extends 'blogs/base.html' %} {% load static %} {% block title %} 
+{% extends 'blogs/base.html' %} {% load static %} {% block title %} Contact
 {% endblock %} {% block style %} {% endblock %} {% block content %}
 
 <div id="colorlib-main">
