--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -14,7 +14,7 @@
         ></div>
         <div class="desc">
           <h2 class="subheading">Hello I'm</h2>
-          <h1 class="mb-4">Elen Henderson</h1>
+          <h1 class="mb-4">{{request.session.first_name|title}} {{request.session.last_name|title}}</h1>
           <p class="mb-4">
             I am A Blogger Far far away, behind the word mountains, far from the
             countries Vokalia and Consonantia, there live the blind texts.
