--- a/blogs/templates/blogs/otp-verify.html
+++ b/blogs/templates/blogs/otp-verify.html
@@ -9,6 +9,28 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header text-center fs-3 fw-bold">OTP Verification</div>
+                {% if messages %}
+                <div class="container mt-3">
+                    {% for message in messages %}
+                    {% if message.tags == 'debug' %}
+                        <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+                    {% elif message.tags == 'info' %}
+                        <div class="alert alert-info alert-dismissible fade show" role="alert">
+                    {% elif message.tags == 'success' %}
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    {% elif message.tags == 'warning' %}
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {% elif message.tags == 'error' %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {% else %}
+                        <div class="alert alert-primary alert-dismissible fade show" role="alert"> <!-- Default fallback -->
+                    {% endif %}
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 <div class="card-body">
                     <form action="" method="post">
                         {% csrf_token %}
