--- a/blogs/templates/blogs/contact.html
+++ b/blogs/templates/blogs/contact.html
@@ -60,109 +60,18 @@
               <input
                 type="submit"
                 value="Send Message"
-                class="btn btn-primary py-3 px-5"
+                class="btn btn-dark py-3 px-5"
               />
             </div>
           </form>
         </div>
 
         <div class="col-md-6">
-          <div id="map"></div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3718.8641119185163!2d72.88298777431227!3d21.23723648058735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04fb4f3717ef7%3A0x72a62da70ec50dca!2sTops%20Technologies%20-%20Surat!5e0!3m2!1sen!2sin!4v1738820249539!5m2!1sen!2sin" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
   </section>
-
-  <footer class="ftco-footer ftco-bg-dark ftco-section">
-    <div class="container px-md-5">
-      <div class="row mb-5">
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4 ml-md-4">
-            <h2 class="ftco-heading-2">Category</h2>
-            <ul class="list-unstyled categories">
-              <li>
-                <a href="#">Photography <span>(6)</span></a>
-              </li>
-              <li>
-                <a href="#">Fashion <span>(8)</span></a>
-              </li>
-              <li>
-                <a href="#">Technology <span>(2)</span></a>
-              </li>
-              <li>
-                <a href="#">Travel <span>(2)</span></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Archives</h2>
-            <ul class="list-unstyled categories">
-              <li>
-                <a href="#">October 2018 <span>(6)</span></a>
-              </li>
-              <li>
-                <a href="#">September 2018 <span>(6)</span></a>
-              </li>
-              <li>
-                <a href="#">August 2018 <span>(8)</span></a>
-              </li>
-              <li>
-                <a href="#">July 2018 <span>(2)</span></a>
-              </li>
-              <li>
-                <a href="#">June 2018 <span>(7)</span></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Have a Questions?</h2>
-            <div class="block-23 mb-3">
-              <ul>
-                <li>
-                  <span class="icon icon-map-marker"></span
-                  ><span class="text"
-                    >203 Fake St. Mountain View, San Francisco, California,
-                    USA</span
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><span class="icon icon-phone"></span
-                    ><span class="text">+2 392 3929 210</span></a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><span class="icon icon-envelope"></span
-                    ><span class="text">info@yourdomain.com</span></a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            All rights reserved | This template is made with
-            <i class="icon-heart" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
 </div>
 <!-- END COLORLIB-MAIN -->
 {% endblock %}
