--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -8,6 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"
@@ -69,8 +70,8 @@
             <li class="colorlib-active"><a href="{% url 'home_view' %}">Home</a></li>
             <li><a href="{% url 'photography_view' %}">Photography</a></li>
             <li><a href="{% url 'posts_view' %}">Posts</a></li>
-            <li><a href="{% url 'about_view' %}">About</a></li>
             <li><a href="{% url 'contact_view' %}">Contact</a></li>
+            <li><a href="{% url 'profile_view' %}">Profile</a></li>
           </ul>
           <!-- set logout button -->
           <li style="list-style-type: none;"><a class="btn btn-dark" href="{% url 'logout' %}">Logout</a></li>
