--- a/blogs/templates/blogs/photography.html
+++ b/blogs/templates/blogs/photography.html
@@ -4,9 +4,9 @@
 <div id="colorlib-main">
   <!-- START COLORLIB-MAIN -->
 
-  <section class="ftco-section">
+  <section class="ftco-section" style="padding: 1em 0em">
     <div class="container">
-      <div class="row d-flex justify-content-center align-items-center vh-100">
+      <div class="row d-flex justify-content-center align-items-center vh-90">
         <div class="col-lg-12 col-md-8 col-sm-10">
           <div class="card p-4 shadow">
             <div class="row justify-content-center mb-3 pb-2">
